Adding dependencies to each module

--- a/immfly-challenge/immfly-challenge-crosscutting/pom.xml
+++ b/immfly-challenge/immfly-challenge-crosscutting/pom.xml
@@ -8,4 +8,12 @@
   <artifactId>immfly-challenge-crosscutting</artifactId>
   <name>immfly-challenge-crosscutting</name>
   <description>Transversal layer, contains classes that affect the entire application</description>
+  
+  <dependencies>
+  		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+  </dependencies>
 </project>
