--- a/immfly-challenge/immfly-challenge-infrastructure/pom.xml
+++ b/immfly-challenge/immfly-challenge-infrastructure/pom.xml
@@ -11,7 +11,10 @@
 	<name>immfly-challenge-infrastructure</name>
 	<description>Infrastructure layer, contains database procedures, repositories.</description>
 
-
+	<properties>
+		<spring-boot.repackage.skip>true</spring-boot.repackage.skip>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.immfly</groupId>
