--- a/immfly-challenge/immfly-challenge-presentation/pom.xml
+++ b/immfly-challenge/immfly-challenge-presentation/pom.xml
@@ -11,6 +11,9 @@
 	<name>immfly-challenge-presentation</name>
 	<description>Presentation layer, contains the main class, controllers and views</description>
 
+<!--	<properties>
+		<spring-boot.repackage.skip>true</spring-boot.repackage.skip>
+	</properties> -->
 
 	<dependencies>
 		<dependency>
