--- a/immfly-challenge/pom.xml
+++ b/immfly-challenge/pom.xml
@@ -23,19 +23,11 @@
 	</properties>
 
 	<dependencies>
-
-
-
-
-
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-
 	</dependencies>
 
 	<scm>
@@ -45,7 +37,24 @@
 		<tag>HEAD</tag>
 	</scm>
 
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<!-- <checkModificationExcludes> <checkModificationExclude>pom.xml</checkModificationExclude> 
+						</checkModificationExcludes> -->
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<modules>
 		<module>immfly-challenge-domain</module>
