--- a/immfly-challenge/immfly-challenge-domain/pom.xml
+++ b/immfly-challenge/immfly-challenge-domain/pom.xml
@@ -21,11 +21,6 @@
 			<artifactId>immfly-challenge-crosscutting</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		<!-- <dependency> <groupId>com.immfly</groupId> <artifactId>immfly-challenge-infrastructure</artifactId> 
-			<version>0.0.1-SNAPSHOT</version> </dependency> -->
-		<!-- <dependency> <groupId>com.immfly</groupId> <artifactId>immfly-challenge-distributed-services</artifactId> 
-			<version>0.0.1-SNAPSHOT</version> </dependency> -->
-		<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct-processor</artifactId>
@@ -41,7 +36,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>5.3.2</version>
 		</dependency>
 
 		<dependency>
@@ -49,6 +43,20 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		</dependency>
+				
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+				
 	</dependencies>
 
 	<build>
