--- a/immfly-challenge/immfly-challenge-presentation/src/main/resources/application.properties
+++ b/immfly-challenge/immfly-challenge-presentation/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 server.port=8080
 
-spring.datasource.username=challenge_user
-spring.datasource.password=cH2*ZnQ%s!xx
-spring.datasource.url=jdbc:sqlserver://concatel.database.windows.net;databaseName=challenge
+immfly.flightsclient.apiHost=http://localhost:8080
 
-spring.h2.console.enabled=true
+#spring.datasource.username=challenge_user
+#spring.datasource.password=cH2*ZnQ%s!xx
+#spring.datasource.url=jdbc:sqlserver://concatel.database.windows.net;databaseName=challenge
 
-spring.jpa.show-sql=true
+#spring.h2.console.enabled=true
 
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
 
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-spring.datasource.dbcp2.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.hibernate.ddl-auto=none
+
+#spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+#spring.datasource.dbcp2.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
