--- a/immfly-challenge/immfly-challenge-infrastructure/pom.xml
+++ b/immfly-challenge/immfly-challenge-infrastructure/pom.xml
@@ -14,18 +14,15 @@
 	<properties>
 		<spring-boot.repackage.skip>true</spring-boot.repackage.skip>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>com.immfly</groupId>
 			<artifactId>immfly-challenge-crosscutting</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-<!--		<dependency>
-			<groupId>com.immfly</groupId>
-			<artifactId>immfly-challenge-domain</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>	-->
+		<!-- <dependency> <groupId>com.immfly</groupId> <artifactId>immfly-challenge-domain</artifactId> 
+			<version>0.0.1-SNAPSHOT</version> </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
