--- a/immfly-challenge/immfly-challenge-presentation/pom.xml
+++ b/immfly-challenge/immfly-challenge-presentation/pom.xml
@@ -11,9 +11,8 @@
 	<name>immfly-challenge-presentation</name>
 	<description>Presentation layer, contains the main class, controllers and views</description>
 
-<!--	<properties>
-		<spring-boot.repackage.skip>true</spring-boot.repackage.skip>
-	</properties> -->
+	<!-- <properties> <spring-boot.repackage.skip>true</spring-boot.repackage.skip> 
+		</properties> -->
 
 	<dependencies>
 		<dependency>
@@ -26,6 +25,7 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
