--- a/immfly-challenge/immfly-challenge-presentation/src/main/resources/application.properties
+++ b/immfly-challenge/immfly-challenge-presentation/src/main/resources/application.properties
@@ -2,16 +2,18 @@ server.port=8080
 
 immfly.flightsclient.apiHost=http://localhost:8080
 
-#spring.datasource.username=challenge_user
-#spring.datasource.password=cH2*ZnQ%s!xx
-#spring.datasource.url=jdbc:sqlserver://concatel.database.windows.net;databaseName=challenge
+spring.main.allow-bean-definition-overriding=true
+
+spring.datasource.username=challenge_user
+spring.datasource.password=cH2*ZnQ%s!xx
+spring.datasource.url=jdbc:sqlserver://concatel.database.windows.net;databaseName=challenge
 
 #spring.h2.console.enabled=true
 
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 
-#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=none
 
-#spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-#spring.datasource.dbcp2.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.datasource.dbcp2.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
