fixing some code

--- a/immfly-challenge/immfly-challenge-presentation/src/main/resources/application.properties
+++ b/immfly-challenge/immfly-challenge-presentation/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-immfly.flightsclient.apiHost=http://localhost:8080
+#immfly.flightsclient.apiHost=http://localhost:8080
 
 spring.main.allow-bean-definition-overriding=true
 
