--- a/immfly-challenge/pom.xml
+++ b/immfly-challenge/pom.xml
@@ -51,9 +51,41 @@
 					<goals>install</goals>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<!-- <checkModificationExcludes> <checkModificationExclude>pom.xml</checkModificationExclude> 
-				</checkModificationExcludes> -->
+						</checkModificationExcludes> -->
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.bsc.maven</groupId>
+				<artifactId>maven-processor-plugin</artifactId>
+				<version>3.3.3</version>
+				<configuration>
+					<defaultOutputDirectory>${project.build.directory}/generated-sources</defaultOutputDirectory>
+					<processors>
+						<processor>org.mapstruct.ap.MappingProcessor</processor>
+<!-- 						<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor> -->
+					</processors>
+					<options>
+						<mapstruct.suppressGeneratorTimestamp>true</mapstruct.suppressGeneratorTimestamp>
+						<mapstruct.defaultComponentModel>jsr330</mapstruct.defaultComponentModel>
+					</options>
+				</configuration>
+				<executions>
+					<execution>
+						<id>process</id>
+						<goals>
+							<goal>process</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.mapstruct</groupId>
+						<artifactId>mapstruct-processor</artifactId>
+						<version>1.4.1.Final</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
 		</plugins>
 	</build>
 
