--- a/immfly-challenge/immfly-challenge-presentation/src/main/resources/application.properties
+++ b/immfly-challenge/immfly-challenge-presentation/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.redis.host=http://localhost
+spring.redis.host=localhost
 spring.redis.password=
 spring.redis.port=6379
 
