--- a/immfly-challenge/pom.xml
+++ b/immfly-challenge/pom.xml
@@ -23,13 +23,90 @@
 	</properties>
 
 	<dependencies>
+	   <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>	
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-data-redis</artifactId>
+		   
+		 </dependency>
+		 
+		 <dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		 </dependency>
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+	
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.7.0</version>
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.7.0</version>
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>	
+			
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+		
+		<dependency> 
+	      <groupId>org.mockito</groupId>  
+	      <artifactId>mockito-core</artifactId>  
+	      <scope>test</scope> 
+	    </dependency>  
+	    
+	    <dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>1.9.5</version>
+		     <scope>test</scope> 
+		  </dependency>
+		  
+	    <dependency> 
+	      <groupId>org.junit.jupiter</groupId>  
+	      <artifactId>junit-jupiter-engine</artifactId> 
+	      <scope>test</scope> 
+	    </dependency>  
+  </dependencies>
 
 	<scm>
 		<url>https://github.com/placidmasvidal/concatel-immfly-challenge.git</url>
@@ -39,30 +116,18 @@
 	</scm>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<configuration>
-					<goals>install</goals>
-					<autoVersionSubmodules>true</autoVersionSubmodules>
-					<!-- <checkModificationExcludes> <checkModificationExclude>pom.xml</checkModificationExclude> 
-						</checkModificationExcludes> -->
-				</configuration>
-			</plugin>
+    	<plugins>
+    
 			<plugin>
 				<groupId>org.bsc.maven</groupId>
 				<artifactId>maven-processor-plugin</artifactId>
-				<version>3.3.3</version>
+				<version>2.2.4</version>
 				<configuration>
-					<defaultOutputDirectory>${project.build.directory}/generated-sources</defaultOutputDirectory>
+					<defaultOutputDirectory>
+						${project.build.directory}/generated-sources
+					</defaultOutputDirectory>
 					<processors>
 						<processor>org.mapstruct.ap.MappingProcessor</processor>
-<!-- 						<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor> -->
 					</processors>
 					<options>
 						<mapstruct.suppressGeneratorTimestamp>true</mapstruct.suppressGeneratorTimestamp>
@@ -87,6 +152,7 @@
 			</plugin>
 
 		</plugins>
+
 	</build>
 
 	<modules>
