--- a/immfly-challenge/immfly-challenge-domain/pom.xml
+++ b/immfly-challenge/immfly-challenge-domain/pom.xml
@@ -12,7 +12,7 @@
 	<description>Domain layer, contains entities, dtos and services, the logic layer.</description>
 
 	<properties>
-		<spring-boot.repackage.skip>true</spring-boot.repackage.skip>
+	
 	</properties>
 
 	<dependencies>
@@ -26,11 +26,7 @@
 			<artifactId>immfly-challenge-infrastructure</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-			<groupId>org.mapstruct</groupId>
-			<artifactId>mapstruct-processor</artifactId>
-			<version>1.4.1.Final</version>
-		</dependency>
+	
 		<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
@@ -96,34 +92,15 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<verbose>true</verbose>
-					<fork>false</fork>
-					<forkCount>0</forkCount>
-					<argLine>-Xmx1024m</argLine>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 
 </project>
