--- a/immfly-challenge/immfly-challenge-domain/pom.xml
+++ b/immfly-challenge/immfly-challenge-domain/pom.xml
@@ -12,7 +12,7 @@
 	<description>Domain layer, contains entities, dtos and services, the logic layer.</description>
 
 	<properties>
-	
+
 	</properties>
 
 	<dependencies>
@@ -21,12 +21,6 @@
 			<artifactId>immfly-challenge-crosscutting</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-			<groupId>com.immfly</groupId>
-			<artifactId>immfly-challenge-infrastructure</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-	
 		<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
@@ -92,13 +86,22 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-apt</artifactId>
+			<version>4.0.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-jpa</artifactId>
+			<version>4.0.6</version>
+		</dependency>
 	</dependencies>
 
 
