--- a/immfly-challenge/immfly-challenge-infrastructure/pom.xml
+++ b/immfly-challenge/immfly-challenge-infrastructure/pom.xml
@@ -21,6 +21,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>com.immfly</groupId>
+			<artifactId>immfly-challenge-domain</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -40,6 +45,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
+
 
 </project>
