--- a/immfly-challenge/immfly-challenge-domain/pom.xml
+++ b/immfly-challenge/immfly-challenge-domain/pom.xml
@@ -102,6 +102,13 @@
 			<artifactId>querydsl-jpa</artifactId>
 			<version>4.0.6</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>6.4.0.jre8</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 
