--- a/immfly-challenge/immfly-challenge-domain/pom.xml
+++ b/immfly-challenge/immfly-challenge-domain/pom.xml
@@ -106,19 +106,18 @@
 			<artifactId>querydsl-jpa</artifactId>
 			<version>4.0.6</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
-			<version>6.4.0.jre8</version>
+			<version>8.4.1.jre8</version>
 			<scope>runtime</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.github.derjust/spring-data-dynamodb -->
-		<dependency>
+<!--		<dependency>
 			<groupId>com.github.derjust</groupId>
 			<artifactId>spring-data-dynamodb</artifactId>
 			<version>5.1.0</version>
-		</dependency>
+		</dependency> -->
 
 	</dependencies>
 
