--- a/immfly-challenge/immfly-challenge-distributed-services/pom.xml
+++ b/immfly-challenge/immfly-challenge-distributed-services/pom.xml
@@ -94,6 +94,7 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.7.0</version>
 		</dependency>
 	</dependencies>
 
@@ -102,10 +103,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.junit.jupiter</groupId>
 						<artifactId>junit-jupiter-engine</artifactId>
+						<version>5.7.0</version>
 					</dependency>
 				</dependencies>
 			</plugin>
